# diocon-tickets

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md  docker-compose.yml
backend/: .env.dev  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  test.py
backend/cli/: README.md  __main__.py  commands.py
backend/docs/: ai_support_matching_flow.md  backups_doc.md  contracts_permissions.md  notifications_implementation.md  project_flow.md  registration_flow.md  tasks_tracking.md  ticket_attachment_flow.md  ticket_comments_rbac.md  ticket_lifespan.md  ticket_number_explain.md  ticket_permissions.md  uff_1c_integration.md  uploading_file_flow.md
backend/migrations/: env.py
backend/migrations/versions/: 2026_04_30_1521-7b4a3734a94d_initial_revision.py  2026_04_30_1619-2ec835b1d439_install_pg_trgm_extension.py  2026_05_02_1509-717610c0cd9e_add_product_to_ticket.py  2026_05_03_1916-a8458c5585e7_edit_counterparty_products.py  2026_05_12_1259-1eaf72f310c5_rename_assignee_tickets.py  2026_05_25_1449-9b9bbd59836d_initial_revision.py  2026_05_25_1559-84669aafe84b_add_null_uq_tasks.py  2026_05_26_2116-3601191e5ca5_add_notifications.py  2026_07_03_1503-6d3e304533fd_add_feedbacks.py
backend/prompts/: suggest_ticket_fields.yaml
backend/src/: __init__.py  event_config.py
backend/src/activity_logs/: dependencies.py  recorder.py  registry.py  router.py
backend/src/activity_logs/domain/: models.py  repos.py
backend/src/activity_logs/infra/: models.py  repos.py
backend/src/contracts/: services.py
backend/src/contracts/domain/: entities.py  events.py  repos.py  services.py  vo.py
backend/src/core/: ai.py  broker.py  database.py  embeddings.py  logging.py  redis.py  settings.py
backend/src/crm/: dependencies.py  mappers.py  router.py  routers.py  schemas.py  services.py
backend/src/crm/domain/: entities.py  vo.py  (+1 more)
backend/src/feedbacks/: mappers.py  router.py  schemas.py
backend/src/iam/: constants.py  dependencies.py  mappers.py  schemas.py  security.py  services.py
backend/src/knowledge/: utils.py
backend/src/media/: constants.py  dependencies.py  mappers.py  router.py  schemas.py  services.py  utils.py
backend/src/notifications/: channels.py  dependencies.py  factories.py  mappers.py  policies.py  resolvers.py  schemas.py  services.py
backend/src/products/: dependencies.py  mappers.py  routers.py  schemas.py  services.py
backend/src/projects/: dependencies.py  exporters.py  mappers.py  router.py  schemas.py  services.py
backend/src/proofreading/: router.py  schemas.py
backend/src/shared/: dependencies.py  router.py  schemas.py
backend/src/tasks/: dependencies.py  mappers.py  router.py  schemas.py
backend/src/tickets/: dependencies.py  loaders.py  mappers.py  router.py  schemas.py
backend/src/timesheets/: dependencies.py  mappers.py  schemas.py
backend/src/timetracking/: dependencies.py
backend/templates/email/: invitation.html  ticket_created.html
backend/tests/: conftest.py
backend/tests/integration/: __init__.py  conftest.py  helpers.py
backend/tests/unit/: conftest.py  in_memory_repos.py
(+304 files in other folders)
