[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=3.3.0",
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "anyio>=4.12.1",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "faker>=40.11.1",
    "fastapi[all]>=0.135.1",
    "faststream[rabbit]>=0.6.7",
    "freezegun>=1.5.5",
    "html2text>=2025.4.15",
    "langchain>=1.2.14",
    "langchain-openai>=1.1.12",
    "language-tool-python>=3.3.0",
    "mypy>=1.19.1",
    "passlib>=1.7.4",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytz>=2026.1.post1",
    "redis>=7.4.0",
    "ruff==0.15.7",
    "sqlalchemy>=2.0.48",
    "testcontainers[minio,postgres]>=4.14.2",
    "unidecode>=1.4.0",
]

[tool.ruff]
line-length = 99
preview = true
extend-exclude = [
    "cli",
    "migrations",
    "migration",
    "src/migrations",
    "alembic.ini",
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.ruff_cache",
    "**/.venv"
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "TD",
    "FIX",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "S105",
    "S101",
    "B008",
    "B024",
    "TRY201",
    "PLW3201",
    "PLW1641",
    "N805",
    "PTH",
    "COM812",
    "ISC001",
    "TRY003",
    "PT013",
    "TID252",
    "RUF001",
    "RUF002",
    "RUF003",
    "ASYNC109",
    "PLC0415",
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "typings",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"typings" = ['typing']

[tool.ruff.lint.pylint]
max-args = 15
max-returns = 10
max-branches = 30


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D", "ARG001", "F401", "PLR6301"]
"migrations/*" = ["S101", "D", "ARG001", "F401", "PLR6301", "I001", "ERA001"]

# -- MyPy --
[tool.mypy]
ignore_missing_imports = true
exclude = [
    "src/migration",
    "src/migrations",
    "__samples__",
    ".venv"
]

# -- Vulture --
[tool.vulture]
exclude = [
    ".vscode/",
    "__samples__/",
    "tests",
    ".venv"
]
ignore_names = [
    "post",
    "put",
    "delete",
    "head"
]

# --- Pytest ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: быстрые unit-тесты для доменной логики",
    "integration: тесты с использованием инфраструктуры",
    "e2e: end-to-end сценарии"
]
testpaths = ["tests"]
